--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,13 @@
-driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://127.0.0.1:3306/seckill?useUnicode=true&characterEncoding=utf8
-username=root
-password=nis123456
+
+
+#mysql
+
+#jdbc.driver=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://127.0.0.1:3306/seckill?useUnicode=true&characterEncoding=utf8
+#jdbc.username=root
+#jdbc.password=nis123456
+
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://192.168.2.27:3306/seckill?useUnicode=true&characterEncoding=utf8
+jdbc.username=root
+jdbc.password=nis123456
