--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,26 @@
-<web-app xmlns="http://java.sun.com/xml/ns/javaee"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-                      http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-  version="3.0"
-  metadata-complete="true">
-  
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         version="3.1">
+         <!-- 修改servlet版本为3.1 -->
+         <!-- 配置DispatcherServlet -->
+         <servlet>
+			<servlet-name>seckill-dispather</servlet-name>
+			<servlet-class>org.springframework.web.servlet.DispatherServlet</servlet-class>         
+			<!-- springMVC需要加载的配置文件
+				spring-dao.xml  spring-service.xml  spring-web.xml
+				  Mybatis ->   spring   - springMVC
+			 -->
+			 <init-param>
+			 	<param-name>contextConfigLocation</param-name>
+			 	<param-value>classpath:spring/spring-*.xml</param-value>
+			 </init-param>
+         </servlet>
+         <servlet-mapping>
+         	<servlet-name>seckill-dispather</servlet-name>
+         	<!-- 默认匹配所有请求 -->
+         	<url-pattern>/</url-pattern>
+         </servlet-mapping>
+         
 </web-app>
