--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,8 +6,8 @@
          <!-- 修改servlet版本为3.1 -->
          <!-- 配置DispatcherServlet -->
          <servlet>
-			<servlet-name>seckill-dispather</servlet-name>
-			<servlet-class>org.springframework.web.servlet.DispatherServlet</servlet-class>         
+			<servlet-name>seckill-dispatcher</servlet-name>
+			<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 			<!-- springMVC需要加载的配置文件
 				spring-dao.xml  spring-service.xml  spring-web.xml
 				  Mybatis ->   spring   - springMVC
@@ -18,7 +18,7 @@
 			 </init-param>
          </servlet>
          <servlet-mapping>
-         	<servlet-name>seckill-dispather</servlet-name>
+         	<servlet-name>seckill-dispatcher</servlet-name>
          	<!-- 默认匹配所有请求 -->
          	<url-pattern>/</url-pattern>
          </servlet-mapping>
