--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,9 @@
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
-			<version>2.7.3</version>
+			<version>2.9.0</version>
+			<type>jar</type>
+			<scope>compile</scope>
 		</dependency>
 		<!-- protostuff序列化依赖 -->
 		<dependency>
