转换编码格式为utf8

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -7,6 +7,7 @@
 #jdbc.username=root
 #jdbc.password=nis123456
 
+#Êý¾Ý¿âµØÖ·
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://192.168.2.27:3306/seckill?useUnicode=true&characterEncoding=utf8
 jdbc.username=root
